The logo is adjusted

--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
                     <li class="encabezado__navegacion--elemento"><a href="#formacion">Formación</a></li>
                     <li class="encabezado__navegacion--elemento"><a href="#proyectos">Proyectos</a></li>
                     <li class="encabezado__navegacion--elemento"><a href="#contacto">Contacto</a></li>
-                </ul>
-                
+                </ul>                
             </nav>
         </div>
     </header>
@@ -48,10 +47,10 @@
             
             <p class="presentacion__subtitulo">Soy formada en... lorem ipsum sit amet consectetur y actualmente estoy participando del proyecto Oracle ONE en Alura Latam.</p>
             <ul class="redes">
-                <li class="redes__img"><a href="https://github.com/ccamilofierro">Github <img src="assets/arrow.png" alt="Flecha"></a></li>
-                <li class="redes__img"><a href="https://www.linkedin.com/in/ccamilofierro">Linkedin <img src="assets/arrow.png" alt="Flecha"></a></li>
-                <li class="redes__img"><a href="https://www.instagram.com/ccamilofierro">Instagram <img src="assets/arrow.png" alt="Flecha"></a></li>
-                <li class="redes__img"><a href="https://drive.google.com/file/d/1xADWYD0n2IJDUQOn_EnuNXPFKJ8-Ronj/view">Currículo <img src="assets/arrow.png" alt="Flecha"></a></li>
+                <li class="redes__img"><a href="https://github.com/ccamilofierro" target="_blank">Github <img src="assets/arrow.png" alt="Flecha"></a></li>
+                <li class="redes__img"><a href="https://www.linkedin.com/in/ccamilofierro" target="_blank">Linkedin <img src="assets/arrow.png" alt="Flecha"></a></li>
+                <li class="redes__img"><a href="https://www.instagram.com/ccamilofierro" target="_blank">Instagram <img src="assets/arrow.png" alt="Flecha"></a></li>
+                <li class="redes__img"><a href="https://drive.google.com/file/d/1xADWYD0n2IJDUQOn_EnuNXPFKJ8-Ronj/view" target="_blank">Currículo <img src="assets/arrow.png" alt="Flecha"></a></li>
             </ul>
         </div>
     </section>
