adjustments in academic training cards

--- a/index.html
+++ b/index.html
@@ -130,40 +130,39 @@
         <h2 class="formacion__titulo">Formación académica</h2>
         <div class="formacion__titulo--subrayado"></div>
         <ul class="formacion__lista">
-           
             <li class="formacion__elemento">
-                <img class="formacion__icono" src="assets/Fornacion/sena.png" alt="Alura">
-                <div>
-                    <h3 class="formacion__nombre">Analisis y desarrollo de los sistemas de la información</h3>
+                <img class="formacion__icono" src="assets/Fornacion/sena.png" alt="Logo SENA">
+                <div class="formacion__contenido">
+                    <h3 class="formacion__nombre">Tecnologo en sistemas</h3>
                     <p class="formacion__detalle">2017 - Sena</p>
                 </div>
             </li>
             <li class="formacion__elemento">
-                <img class="formacion__icono" src="assets/Fornacion/universidad-del-tolima.png" alt="UFRJ">
-                <div>
-                    <h3 class="formacion__nombre">Ingenieria de sistemas</h3>
+                <img class="formacion__icono" src="assets/Fornacion/universidad-del-tolima.png" alt="Logo Universidad del Tolima">
+                <div class="formacion__contenido">
+                    <h3 class="formacion__nombre">Ingeniería de sistemas</h3>
                     <p class="formacion__detalle">2017 - Universidad del Tolima</p>
                 </div>
             </li>
             <li class="formacion__elemento">
-                <img class="formacion__icono" src="assets/Fornacion/SergioArboleda.png" alt="UFRJ">
-                <div>
+                <img class="formacion__icono" src="assets/Fornacion/SergioArboleda.png" alt="Logo Universidad Sergio Arboleda">
+                <div class="formacion__contenido">
                     <h3 class="formacion__nombre">Bootcamp de programación</h3>
                     <p class="formacion__detalle">2024 - Universidad Sergio Arboleda</p>
                 </div>
             </li>
             <li class="formacion__elemento">
-                <img class="formacion__icono" src="assets/Fornacion/alura_logo.png" alt="UFRJ">
-                <div>
+                <img class="formacion__icono" src="assets/Fornacion/alura_logo.png" alt="Logo Alura">
+                <div class="formacion__contenido">
                     <h3 class="formacion__nombre">Especialización Front-end</h3>
                     <p class="formacion__detalle">En curso - Alura</p>
                 </div>
             </li>
             <li class="formacion__elemento">
-                <img class="formacion__icono" src="assets/Fornacion/ibm.png" alt="UFRJ">
-                <div>
-                    <h3 class="formacion__nombre">Analisis de datos</h3>
-                    <p class="formacion__detalle">En curso - Ibm</p>
+                <img class="formacion__icono" src="assets/Fornacion/ibm.png" alt="Logo IBM">
+                <div class="formacion__contenido">
+                    <h3 class="formacion__nombre">Análisis de datos</h3>
+                    <p class="formacion__detalle">En curso - IBM</p>
                 </div>
             </li>
         </ul>
