--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <header class="encabezado__container">
         <div class="encabezado">
-            <a href="index.html" class="encabezado__logo" title="Página principal de ExploraCol">
+            <a href="index.html" class="encabezado__logo" title="Página principal">
                 <span class="encabezado__logo--icono"></span>
             </a>
             <button class="menu-toggle" aria-label="Abrir menú de navegación" aria-expanded="false">
@@ -45,12 +45,34 @@
                 <span id="text"></span><span id="cursor" class="cursor">|</span>
             </h2>
             
-            <p class="presentacion__subtitulo">Soy formada en... lorem ipsum sit amet consectetur y actualmente estoy participando del proyecto Oracle ONE en Alura Latam.</p>
+            <p class="presentacion__subtitulo">Desarrollador Full Stack con pasión por crear soluciones web modernas 
+                y eficientes. Combino diseño intuitivo con tecnologías avanzadas para transformar ideas en productos 
+                digitales funcionales y atractivos.</p>
             <ul class="redes">
-                <li class="redes__img"><a href="https://github.com/ccamilofierro" target="_blank">Github <img src="assets/arrow.png" alt="Flecha"></a></li>
-                <li class="redes__img"><a href="https://www.linkedin.com/in/ccamilofierro" target="_blank">Linkedin <img src="assets/arrow.png" alt="Flecha"></a></li>
-                <li class="redes__img"><a href="https://www.instagram.com/ccamilofierro" target="_blank">Instagram <img src="assets/arrow.png" alt="Flecha"></a></li>
-                <li class="redes__img"><a href="https://drive.google.com/file/d/1xADWYD0n2IJDUQOn_EnuNXPFKJ8-Ronj/view" target="_blank">Currículo <img src="assets/arrow.png" alt="Flecha"></a></li>
+                <li class="redes__img">
+                    <a href="https://github.com/ccamilofierro" target="_blank">
+                        <img src="assets/utils/github-sign.png" alt="Github">
+                        <span>Github</span>
+                    </a>
+                </li>
+                <li class="redes__img">
+                    <a href="https://www.linkedin.com/in/ccamilofierro" target="_blank">
+                        <img src="assets/utils/linkedin.png" alt="Linkedin">
+                        <span>Linkedin</span>
+                    </a>
+                </li>
+                <li class="redes__img">
+                    <a href="https://www.instagram.com/ccamilofierro" target="_blank">
+                        <img src="assets/utils/instagram.png" alt="Instagram">
+                        <span>Instagram</span>
+                    </a>
+                </li>
+                <li class="redes__img">
+                    <a href="https://drive.google.com/file/d/1xADWYD0n2IJDUQOn_EnuNXPFKJ8-Ronj/view" target="_blank">
+                        <img src="assets/utils/cv.png" alt="Currículo">
+                        <span>Currículo</span>
+                    </a>
+                </li>
             </ul>
         </div>
     </section>
@@ -59,8 +81,15 @@
     <section class="sobre-mi" id="sobre-mi">
         <h2 class="sobre-mi__titulo">Sobre mí</h2>
         <div class="sobre-mi__titulo--subrayado"></div>
-        <p class="sobre-mi__texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque velit velit, volutpat semper dignissim dictum, imperdiet ut lacus. Quisque gravida ex a mattis pretium. Suspendisse potenti. Ut semper sagittis ligula et lacinia.</p>
-        <p class="sobre-mi__texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque velit velit, volutpat semper dignissim dictum, imperdiet ut lacus. Quisque gravida ex a mattis pretium. Suspendisse potenti. Ut semper sagittis ligula et lacinia. Aenean sit amet felis venenatis, egestas metus vitae, aliquet metus.</p>
+        <p class="sobre-mi__texto">Me especializo en crear aplicaciones web modernas y funcionales utilizando las últimas 
+            tecnologías. Mi enfoque está en el desarrollo de soluciones que combinen una experiencia de usuario intuitiva 
+            con un código limpio y eficiente.</p>
+        <p class="sobre-mi__texto">Con experiencia en frontend (Angular, React, HTML, CSS, JavaScript) y backend 
+            (Java, Python, Spring Boot, MongoDB, MySQL), me encanta tomar desafíos que implican resolver problemas complejos 
+            y transformarlos en soluciones digitales.</p>
+            <p class="sobre-mi__texto">Soy apasionado por aprender nuevas herramientas y mejorar continuamente mis 
+                habilidades, buscando siempre estar a la vanguardia en tendencias tecnológicas. Mi objetivo es no 
+                solo desarrollar software, sino también aportar valor con cada proyecto en el que trabajo.</p>
 
     </section>
 
@@ -178,8 +207,8 @@
                 <div class="proyecto__contenedor">
                     <img src="/assets/Proyectos/ExploraCol.png" alt="Imagen del Proyecto 1" loading="lazy" class="proyecto__imagen">
                     <div class="proyecto__contenido proyecto__contenido--derecha">
-                        <h3 class="proyecto__nombre">Nombre del Proyecto 1</h3>
-                        <p class="proyecto__descripcion">Breve descripción del proyecto 1. Explica qué hace y por qué es importante.</p>
+                        <h3 class="proyecto__nombre">Agencia de viajes</h3>
+                        <p class="proyecto__descripcion">Los usuarios pueden explorar destinos, encontrar paquetes personalizados y reservar sus próximos viajes</p>
                         <ul class="proyecto__tecnologias">
                             <li>HTML</li>
                             <li>CSS</li>
@@ -210,7 +239,6 @@
                     </div>
                 </div>
             </article>
-            <!-- Repite el patrón para más proyectos -->
         </div>
     </section>
 
@@ -220,6 +248,7 @@
             <img src="assets/contacto.jpg" alt="Descripción de la imagen" class="contacto__imagen">
             <div class="contacto__texto">
                 <h2 class="contacto__titulo">Contacto</h2>
+                <div class="contacto__titulo--subrayado"></div>
                 <p class="contacto__descripcion">¿Quieres contactarme?
                     Complete el siguiente formulario y me pondré en contacto con usted lo antes posible.</p>
                 <form class="contacto__formulario">
