insertion of animations

--- a/index.html
+++ b/index.html
@@ -79,20 +79,19 @@
 
     <!-- Sección sobre mí -->
     <section class="sobre-mi" id="sobre-mi">
-        <h2 class="sobre-mi__titulo">Sobre mí</h2>
-        <div class="sobre-mi__titulo--subrayado"></div>
-        <p class="sobre-mi__texto">Me especializo en crear aplicaciones web modernas y funcionales utilizando las últimas 
+        <h2 class="sobre-mi__titulo animate-element">Sobre mí</h2>
+        <div class="sobre-mi__titulo--subrayado animate-element"></div>
+        <p class="sobre-mi__texto animate-element">Me especializo en crear aplicaciones web modernas y funcionales utilizando las últimas 
             tecnologías. Mi enfoque está en el desarrollo de soluciones que combinen una experiencia de usuario intuitiva 
             con un código limpio y eficiente.</p>
-        <p class="sobre-mi__texto">Con experiencia en frontend (Angular, React, HTML, CSS, JavaScript) y backend 
+        <p class="sobre-mi__texto animate-element">Con experiencia en frontend (Angular, React, HTML, CSS, JavaScript) y backend 
             (Java, Python, Spring Boot, MongoDB, MySQL), me encanta tomar desafíos que implican resolver problemas complejos 
             y transformarlos en soluciones digitales.</p>
-            <p class="sobre-mi__texto">Soy apasionado por aprender nuevas herramientas y mejorar continuamente mis 
-                habilidades, buscando siempre estar a la vanguardia en tendencias tecnológicas. Mi objetivo es no 
-                solo desarrollar software, sino también aportar valor con cada proyecto en el que trabajo.</p>
-
+        <p class="sobre-mi__texto animate-element">Soy apasionado por aprender nuevas herramientas y mejorar continuamente mis 
+            habilidades, buscando siempre estar a la vanguardia en tendencias tecnológicas. Mi objetivo es no 
+            solo desarrollar software, sino también aportar valor con cada proyecto en el que trabajo.</p>
     </section>
-
+    
     <!-- Sección de Habilidades -->
     <section class="habilidades" id="habilidades">
         <video class="habilidades__video" autoplay muted loop>
@@ -101,8 +100,8 @@
         </video>
         <div class="habilidades__overlay"></div>
         <div class="habilidades__content">
-            <h2 class="habilidades__titulo">Habilidades</h2>
-            <div class="habilidades__titulo--subrayado"></div>
+            <h2 class="habilidades__titulo animate-element">Habilidades</h2>
+            <div class="habilidades__titulo--subrayado animate-element"></div>
             <ul class="habilidades__lista">
                 <li class="habilidades__elemento">
                     <img class="habilidades__icono" src="assets/technologies/html.png" alt="HTML">
@@ -124,7 +123,6 @@
                     <img class="habilidades__icono" src="assets/technologies/react.png" alt="React">
                     <p class="habilidades__nombre">React</p>
                 </li>
-                
                 <li class="habilidades__elemento">
                     <img class="habilidades__icono" src="assets/technologies/tailwinds.png" alt="Tailwinds">
                     <p class="habilidades__nombre">Tailwinds</p>
@@ -156,8 +154,8 @@
 
     <!-- Sección de Formación académica -->
     <section class="formacion" id="formacion">
-        <h2 class="formacion__titulo">Formación académica</h2>
-        <div class="formacion__titulo--subrayado"></div>
+        <h2 class="formacion__titulo animate-element">Formación académica</h2>
+        <div class="formacion__titulo--subrayado animate-element"></div>
         <ul class="formacion__lista">
             <li class="formacion__elemento">
                 <img class="formacion__icono" src="assets/Fornacion/sena.png" alt="Logo SENA">
@@ -200,10 +198,10 @@
 
     <!-- Sección de Proyectos -->
     <section class="proyectos" id="proyectos">
-        <h2 class="proyectos__titulo">Mis Proyectos</h2>
-        <div class="proyectos__titulo--subrayado"></div>
+        <h2 class="proyectos__titulo animate-element">Mis Proyectos</h2>
+        <div class="proyectos__titulo--subrayado animate-element"></div>
         <div class="proyectos__lista">
-            <article class="proyecto">
+            <article class="proyecto animate-project">
                 <div class="proyecto__contenedor">
                     <img src="/assets/Proyectos/ExploraCol.png" alt="Imagen del Proyecto 1" loading="lazy" class="proyecto__imagen">
                     <div class="proyecto__contenido proyecto__contenido--derecha">
@@ -221,12 +219,12 @@
                     </div>
                 </div>
             </article>
-            <article class="proyecto">
+            <article class="proyecto animate-project">
                 <div class="proyecto__contenedor">
-                    <img src="/assets/Proyectos/ExploraCol.png" alt="Imagen del Proyecto 1" loading="lazy" class="proyecto__imagen">
+                    <img src="/assets/Proyectos/ExploraCol.png" alt="Imagen del Proyecto 2" loading="lazy" class="proyecto__imagen">
                     <div class="proyecto__contenido proyecto__contenido--izquierda">
-                        <h3 class="proyecto__nombre">Nombre del Proyecto 1</h3>
-                        <p class="proyecto__descripcion">Breve descripción del proyecto 1. Explica qué hace y por qué es importante.</p>
+                        <h3 class="proyecto__nombre">Nombre del Proyecto 2</h3>
+                        <p class="proyecto__descripcion">Breve descripción del proyecto 2. Explica qué hace y por qué es importante.</p>
                         <ul class="proyecto__tecnologias">
                             <li>HTML</li>
                             <li>CSS</li>
@@ -244,12 +242,12 @@
 
     <section class="contacto" id="contacto">
         <div class="contacto__contenedor">
-            <img src="assets/contacto.jpg" alt="Descripción de la imagen" class="contacto__imagen">
+            <img src="assets/contacto.jpg" alt="Descripción de la imagen" class="contacto__imagen animate-element">
             <div class="contacto__texto">
-                <h2 class="contacto__titulo">Contacto</h2>
-                <div class="contacto__titulo--subrayado"></div>
-                <p class="contacto__descripcion">¿Quieres contactarme? Complete el siguiente formulario y me pondré en contacto con usted lo antes posible.</p>
-                <form class="contacto__formulario" onsubmit="return validarFormulario()">
+                <h2 class="contacto__titulo animate-element">Contacto</h2>
+                <div class="contacto__titulo--subrayado animate-element"></div>
+                <p class="contacto__descripcion animate-element">¿Quieres contactarme? Complete el siguiente formulario y me pondré en contacto con usted lo antes posible.</p>
+                <form class="contacto__formulario animate-element" onsubmit="return validarFormulario()">
                     <div class="contacto__campo-contenedor">
                         <input class="contacto__campo" type="text" id="nombre" maxlength="100" pattern="^[a-zA-Z\s]+$" title="El nombre solo puede contener letras y espacios" required>
                         <label for="nombre" class="contacto__label">Nombre</label>
