--- a/index.html
+++ b/index.html
@@ -100,16 +100,16 @@
                 <polyline points="8 6 2 12 8 18"></polyline>
               </svg>
               <p class="sobre-mi__texto">Cuento con experiencia en frontend (Angular, React, HTML, CSS, JavaScript) y backend 
-                  (Java, Python, Spring Boot, MongoDB, MySQL), ademas me encanta tomar desafíos que implican resolver problemas complejos 
+                  (Java, Python, Spring Boot, MongoDB, MySQL). Me encanta tomar desafíos que implican resolver problemas complejos 
                   y transformarlos en soluciones digitales.</p>
             </div>
             <div class="sobre-mi__card">
               <svg class="sobre-mi__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                <rect x="2" y="7" width="20" height="14" rx="2" ry="2"></rect>
-                <path d="M16 21V5a2 2 0 0 0-2-2h-4a2 2 0 0 0-2 2v16"></path>
+                <path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"></path>
+                <path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"></path>
               </svg>
-              <p class="sobre-mi__texto">Soy un apasionado por aprender nuevas herramientas y asi mejorar continuamente mis 
-                  habilidades, siempre busco estar a la vanguardia en tendencias tecnológicas. Mi objetivo es no 
+              <p class="sobre-mi__texto">Soy un apasionado por aprender nuevas herramientas y así mejorar continuamente mis 
+                  habilidades. Siempre busco estar a la vanguardia en tendencias tecnológicas. Mi objetivo es no 
                   solo desarrollar software, sino también aportar valor con cada proyecto en el que trabajo.</p>
             </div>
           </div>
@@ -267,7 +267,7 @@
                         </ul>
                         <div class="proyecto__enlaces">
                             <a href="https://html-css-js-ccamilofierro.github.io/ExploraCol/index.html" class="proyecto__enlace proyecto__enlace--demo" target="_blank">Demo</a>
-                            <a href="#" class="proyecto__enlace proyecto__enlace--codigo">Código</a>
+                            <a href="https://github.com/Html-Css-js-ccamilofierro/ExploraCol" class="proyecto__enlace proyecto__enlace--codigo">Código</a>
                         </div>
                     </div>
                 </div>
@@ -306,7 +306,7 @@
 
     <section class="contacto" id="contacto">
         <div class="contacto__contenedor">
-            <img src="assets/contacto.gif" alt="Descripción de la imagen" class="contacto__imagen animate-element">
+            <img src="assets/utils/contacto.gif" alt="Descripción de la imagen" class="contacto__imagen animate-element">
             <div class="contacto__texto">
                 <h2 class="section__title animate-element">Contacto</h2>
                 <div class="section__title--underlined
