contact text is changed

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                         </ul>
                         <div class="proyecto__enlaces">
                             <a href="https://html-css-js-ccamilofierro.github.io/ExploraCol/index.html" class="proyecto__enlace proyecto__enlace--demo" target="_blank">Demo</a>
-                            <a href="https://github.com/Html-Css-js-ccamilofierro/ExploraCol" class="proyecto__enlace proyecto__enlace--codigo">Código</a>
+                            <a href="https://github.com/Html-Css-js-ccamilofierro/ExploraCol" class="proyecto__enlace proyecto__enlace--codigo"  target="_blank">Código</a>
                         </div>
                     </div>
                 </div>
@@ -311,7 +311,7 @@
                 <h2 class="section__title animate-element">Contacto</h2>
                 <div class="section__title--underlined
  animate-element"></div>
-                <p class="contacto__descripcion animate-element">¿Quieres contactarme? Complete el siguiente formulario y me pondré en contacto con usted lo antes posible.</p>
+                <p class="contacto__descripcion animate-element">Si tienes alguna pregunta, inquietud o simplemente quieres saber más sobre nuestros servicios, no dudes en ponerte en contacto con nosotros.</p>
                 <form class="contacto__formulario animate-element" onsubmit="return validarFormulario()">
                     <div class="contacto__campo-contenedor">
                         <input class="contacto__campo" type="text" id="nombre" maxlength="100" pattern="^[a-zA-Z\s]+$" title="El nombre solo puede contener letras y espacios" required>
