general responsive adjustments

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <span id="text"></span><span id="cursor" class="cursor">|</span>
             </h2>
             
-            <p class="presentacion__subtitulo">Soy un desarrollador Full Stack apasionado por crear soluciones web modernas 
+            <p class="presentacion__subtitulo">Estoy apasionado por crear soluciones web modernas 
                 y eficientes. Me gusta combinar diseños intuitivos con tecnologías avanzadas para transformar ideas en productos 
                 digitales funcionales y atractivos.</p>
             <ul class="redes">
