Open Graph metadata in the HTML of your page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Portafolio | Cristian Fierro" />
+    <meta property="og:description" content="Desarrollador full stack" />
+    <meta property="og:image" content="/assets/utils/ico.png" />
+    <meta property="og:type" content="website" />
     <link rel="icon" href="/assets/utils/ico.png" type="image/png">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
