--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Portafolio | Cristian Fierro" />
-    <meta property="og:description" content="Desarrollador full stack" />
-    <meta property="og:image" content="/assets/utils/ico.png" />
+    <meta property="og:description" content="Desarrollador full stack especializado en crear soluciones web modernas y eficientes" />
+    <meta property="og:image" content="https://html-css-js-ccamilofierro.github.io/Portfolio/assets/utils/image.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://html-css-js-ccamilofierro.github.io/Portfolio/index.html" />
     <link rel="icon" href="/assets/utils/ico.png" type="image/png">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
