--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:image:height" content="630" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://html-css-js-ccamilofierro.github.io/Portfolio/index.html" />
-    <link rel="icon" href="/assets/utils/ico.png" type="image/png">
+    <link rel="icon" href="https://html-css-js-ccamilofierro.github.io/Portfolio/assets/utils/ico.png" type="image/png">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
