--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                 <h2 class="section__title animate-element">Contacto</h2>
                 <div class="section__title--underlined
  animate-element"></div>
-                <p class="contacto__descripcion animate-element">Si tienes alguna pregunta, inquietud o simplemente quieres saber más sobre nuestros servicios, no dudes en ponerte en contacto con nosotros.</p>
+                <p class="contacto__descripcion animate-element">Si tienes alguna pregunta, inquietud o simplemente quieres colaborar conmigo no dudes en escribirme.</p>
                 <form class="contacto__formulario animate-element" onsubmit="return validarFormulario()">
                     <div class="contacto__campo-contenedor">
                         <input class="contacto__campo" type="text" id="nombre" maxlength="100" pattern="^[a-zA-Z\s]+$" title="El nombre solo puede contener letras y espacios" required>
